# linux_dev_2025

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh  test.txt  test2.txt
04_Debugging/: Makefile  range.c  reference1.txt  reference2.txt  scenario1.gdb  scenario2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c  test.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test.sh
08_I18n/: Makefile.am  configure.ac  guess.c  ru.po
09_PatchDiff/: 001.patch  002.patch  003.patch  Makefile  maze.c
10_LibTesting/: configure.ac
10_LibTesting/src/: Makefile.am  buf.c  buf.h
10_LibTesting/tests/: Makefile.am  test_buf.c
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: Makefile.am  ru.po
11_Documenting/src/: Makefile.am  guess.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  README.md  configure.ac
12_InstallPackaging/po/: Makefile.am  ru.po
12_InstallPackaging/src/: Makefile.am  guess.c  roman.c  roman.h
12_InstallPackaging/tests/: Makefile.am  test_all.c
