AC_PREREQ([2.69])
AC_INIT([Guessing a number with binary search], [1.0], [my_mail@gmail.ru], [guess])
AM_INIT_AUTOMAKE([foreign])

DX_INIT_DOXYGEN([guess])

LT_INIT([disable-static])
AC_CONFIG_SRCDIR([src/guess.c])
AC_CONFIG_HEADERS([config.h])


AC_PROG_CC

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 po/Makefile
                 Doxyfile
                 ])
AC_OUTPUT

